--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <resources>
-    <string name="app_name">Reportly</string>
+    <string name="app_name">Zingo</string>
 
     <string name="sign_up">Sign Up Now</string>
 
-    <string name="title_home">Home</string>
-    <string name="title_latest">Latest</string>
-    <string name="title_hot">Hot</string>
-    <string name="title_tracker">Complaint Tracker</string>
-    <string name="title_friends">Authorities</string>
-
+    <string name="title_info">Info</string>
+    <string name="title_events">Events</string>
+    <string name="title_matches">Matches</string>
+    <string name="title_profile">Profile</string>
 
     <string name="facebook_app_id">373103943306238</string>
     <string name="fb_login_protocol_scheme">fb373103943306238</string>
@@ -24,6 +22,7 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_intro">Connecting awesome travelers to awesome friends</string>
 
     <string-array name="agencies">
         <item>Select an item</item>
