--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,14 @@
 
     <string name="sign_up">Sign Up Now</string>
 
-    <string name="title_info">Info</string>
+    <string name="title_about_us">About Us</string>
     <string name="title_events">Events</string>
     <string name="title_matches">Matches</string>
     <string name="title_profile">Profile</string>
+
+    <string name="tab_hosts">Hosts</string>
+    <string name="tab_events">Events</string>
+    <string name="tab_attendees">Attendees</string>
 
     <string name="facebook_app_id">373103943306238</string>
     <string name="fb_login_protocol_scheme">fb373103943306238</string>
@@ -22,63 +26,6 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+
     <string name="title_intro">Connecting awesome travelers to awesome friends</string>
-
-    <string-array name="agencies">
-        <item>Select an item</item>
-        <item>Ministry of Agriculture</item>
-        <item>Ministry of Chemicals and Fertilizers (Including Pharmaceuticals)</item>
-        <item>Ministry of Civil Aviation</item>
-        <item>Ministry of Coal</item>
-        <item>Ministry of Commerce and Industry/ Ministry of Business</item>
-        <item>Ministry of Communications and Information Technology</item>
-        <item>Ministry of Consumer Affairs, Food and Public Distribution</item>
-        <item>Ministry of Corporate Affairs</item>
-        <item>Ministry of Culture</item>
-        <item>Ministry of Defence</item>
-        <item>Ministry of Earth Sciences</item>
-        <item>Ministry of Environment and Forests</item>
-        <item>Ministry of External Affairs</item>
-        <item>Ministry of Finance</item>
-        <item>Ministry of Food Processing Industries</item>
-        <item>Ministry of Health and Family Welfare</item>
-        <item>Ministry of Heavy Industries and Public Enterprises</item>
-        <item>Ministry of Home Affairs</item>
-        <item>Ministry of Housing and Urban Poverty Alleviation</item>
-        <item>Ministry of Human Resource Development</item>
-        <item>Ministry of Information and Broadcasting</item>
-        <item>Ministry of Labour and Employment</item>
-        <item>Ministry of Law and Justice</item>
-        <item>Ministry of Micro, Small and Medium Enterprises</item>
-        <item>Ministry of Mines</item>
-        <item>Ministry of Minority Affairs</item>
-        <item>Ministry of New and Renewable Energy</item>
-        <item>Ministry of Panchayati Raj</item>
-        <item>Ministry of Personnel, Public Grievances and Pensions</item>
-        <item>Ministry of Petroleum and Natural Gas</item>
-        <item>Ministry of Power</item>
-        <item>Ministry of Railways</item>
-        <item>Ministry of Road Transport and Highways</item>
-        <item>Ministry of Rural Development</item>
-        <item>Ministry of Science and Technology</item>
-        <item>Ministry of Social Justice and Empowerment</item>
-        <item>Ministry of Statistics and Programme Implementation</item>
-        <item>Ministry of Skill Development and Entrepreneurship</item>
-        <item>Ministry of Steel</item>
-        <item>Ministry of Textiles</item>
-        <item>Ministry of Women and Child Development</item>
-        <item>Ministry of Youth Affairs and Sports</item>
-        <item>Autonomous Bodies</item>
-        <item>Independent Departments</item>
-        <item>Independent Agencies/Bodies</item>
-        <item>Intelligence</item>
-        <item>Law enforcement</item>
-        <item>Tribunals in India</item>
-        <item>Others</item>
-    </string-array>
-
-    <string-array name="mode">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
 </resources>
