--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_intro">Connecting awesome travelers to awesome friends</string>
+    <string name="sign_in">Sign In</string>
 </resources>
